# sticky_notes

./: .gitignore  Cargo.toml  GoNotes.desktop  Makefile.in  README.md  configure.ac  go_notes  iconunix.go  main.go  make.sh  make_icon.sh  wrapper.go
driver/: main.go
src/: main.rs  style.css
